# WeatherService

./: .gitignore  CMakeLists.txt  JsonService.cpp  JsonService.h  README.md  Service.h  Weather.cpp  Weather.h  XmlService.cpp  XmlService.h  main.cpp
